Removing height from contentTitle icon to fix alignment issues

--- a/src/scss/components/optional/_content-title.scss
+++ b/src/scss/components/optional/_content-title.scss
@@ -23,7 +23,6 @@
 
         .c-contentTitle-icon {
             width: 24px;
-            height: 24px;
             margin-right: spacing();
         }
 
